--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,4 +8,4 @@ repos:
         - id: terraform_validate
         - id: terraform_docs
           args:
-            - --args=--config=.terraform-docs.yml
+            - --args=--output-file README.md
